[gd_scene load_steps=3 format=2]

[ext_resource path="res://examples/accept-dialog.gd" type="Script" id=1]
[ext_resource path="res://examples/mouse-block-panel-container.tscn" type="PackedScene" id=2]

[node name="Accept Dialog" type="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowDialogButton" type="Button" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 150.0
margin_bottom = 90.0
text = "Show Dialog"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResponseLabel" type="Label" parent="."]
margin_left = 175.0
margin_top = 50.0
margin_right = 375.0
margin_bottom = 90.0
rect_min_size = Vector2( 200, 40 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseBlockPanelContainer" parent="." instance=ExtResource( 2 )]
visible = false
margin_right = 1024.0
margin_bottom = 600.0

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_left = 400.0
margin_top = 200.0
margin_right = 631.0
margin_bottom = 314.0
popup_exclusive = true
dialog_text = "Please accept this dialog. You have no other choice!"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ShowDialogButton" to="." method="_on_ShowDialogButton_pressed"]
[connection signal="about_to_show" from="AcceptDialog" to="." method="_on_AcceptDialog_about_to_show"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
